--- a/_site.yml
+++ b/_site.yml
@@ -7,10 +7,12 @@ navbar:
       href: about.html
     - text: "Plotly"
       href: plotly.html
+    - text: "Dashboard"
+      href: dashboardd.html
     - icon: fa-envelope fa-lg
       href: mailto:<yasminevang@icloud.com>
     - icon: fa-github fa-lg
       href: http://github.com/yasminevang/
 output:
   html_document:
-    theme: flatly
+    theme: cerulean
